fix: align tooltip z-index to EUI tooltip z-index

--- a/src/components/portal/_portal.scss
+++ b/src/components/portal/_portal.scss
@@ -1,6 +1,6 @@
 [id^='echTooltipPortal'] {
   pointer-events: none;
-  z-index: 10000000;
+  z-index: 9000;
 }
 
 [id^='echAnchor'] {
